Colab: Added summary section

--- a/Facial-Emotion-Detection/Model/01_cnn_with_data_augmentation.ipynb
+++ b/Facial-Emotion-Detection/Model/01_cnn_with_data_augmentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND0/QbhbNGmj+tF68Iwsvl",
+      "authorship_tag": "ABX9TyMKswKWQgTrpmOtwSBHjdw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jYjEvWIuwkej"
       },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "CnE7WpxHq-HS"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "1SsKPJzDp8uq"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         },
         "outputId": "60002101-15d2-4b5f-ff06-673bdc1366a0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "D4EzKMSN0xy7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         },
         "outputId": "6636488c-b770-4c9c-c0f1-089b2ca9ff4d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         },
         "outputId": "dc994de5-b107-450d-cf00-200e87d63106"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +221,7 @@
         },
         "outputId": "e1322bbb-6f94-46fc-d217-96cfb461d805"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
         },
         "outputId": "c4642793-b8f5-415d-a76a-73b557c3b79a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +350,7 @@
         },
         "outputId": "6c7a60c9-ac47-489f-affd-b4962486de72"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
         },
         "outputId": "0702d449-dfaf-42fc-bbce-90856c9a5a77"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
       "metadata": {
         "id": "d2q8Thts4ktI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -453,7 +453,7 @@
         },
         "outputId": "6acc5e81-5d85-40aa-b2ad-1c5cb6fcc2bc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -497,7 +497,7 @@
       "metadata": {
         "id": "WeyWIq1q2gPM"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,7 +534,7 @@
       "metadata": {
         "id": "1-yatQC3Kfx5"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
       "metadata": {
         "id": "qxVmkb3bwiRr"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "tueDp7uF1xwq"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +637,7 @@
       "metadata": {
         "id": "1ngpSM6dx8jS"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +659,7 @@
       "metadata": {
         "id": "4tIPI6XUOEnc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +683,7 @@
       "metadata": {
         "id": "PecHj4V73Cs3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
       "metadata": {
         "id": "VmfPUjh-6o4M"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,7 +747,7 @@
         },
         "outputId": "cc959380-b48a-4389-ee1e-9a08d3a4e8bd"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +794,7 @@
         },
         "outputId": "f6d4c256-7967-4956-fb4b-8d2079de19ec"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,7 +1058,7 @@
         },
         "outputId": "eb56c6e2-1307-4861-f52b-ff441ac68271"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1086,7 +1086,7 @@
         },
         "outputId": "6103239b-3837-4d7b-ff21-54e7d130e7c4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1130,7 +1130,7 @@
       "metadata": {
         "id": "HEBpQV_eGkMA"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1147,7 +1147,7 @@
         },
         "outputId": "af238118-d0ee-4c76-fef6-122ddc33d98b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         },
         "outputId": "3cec8fe5-2e5a-4d2a-f7a3-c67a0d149fde"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1439,7 +1439,7 @@
         },
         "outputId": "ac17b48f-316c-4a0e-d5a8-579764dbbd50"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1449,6 +1449,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Summary"
+      ],
+      "metadata": {
+        "id": "wVtf7LYo0aM1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* We trained a CNN model to classify images belonging to 4 categories of emotion - Angry, Happy, Neutral, Surprised.\n",
+        "* We set up a 5-fold cross-validation framework. 80% of the data is used for training + validation, while 20% is used as a holdout test set. In this way all images are present in a holdout set exactly once, which allows us to make predictions for all our images.\n",
+        "* The data is split in a stratified manner based on the class distribution. The class ratio is same in every test set and also reflects the ratio in the original data.\n",
+        "* The CNN model is trained in two configurations: \n",
+        "    * on the original data only\n",
+        "    * on augmented data\n",
+        "* Performance (Accuracy):\n",
+        "    * Original data: Folds - 0.7115 to 0.7206, Overall - 0.7155\n",
+        "    * Augmented data: Folds - 0.7609 to 0.7887, Overall - 0.7704\n",
+        "* Performance vs Resources tradeoff: \n",
+        "    * Looking at the training curves, we can see the training on augmented data gives a stable performance, as the validation loss and accuracy are almost perfectly mirroring the training loss and accuracy. Additionally, augmenting the data boosts accuracy by ≈0.6, which is a significant improvement.\n",
+        "    * However, looking at the training times we can see that artificially increasing the data size through augmentation also increases the training time required to complete. The difference is in several orders of magnitude i.e., 9-10 mins vs 2+ hours.\n",
+        "\n",
+        "* Results analysis:\n",
+        "    * 'Happy' and 'Surprise' are exaggerated expressions i.e., having more pronounced effect on facial features, hence they are correctly classified more often (80-85%).\n",
+        "    * 'Neutral' is close behind, since it can be identified by a lack of effect on facial features (≈75%).\n",
+        "    * 'Anger' has a wider spectrum, sometimes very clear through a frown or scrunched eyebrows, sometimes very neutral in the form of pursed lips. Due to this, it is classified correctly less often (58-62%). As expected, the most common misclassification for 'Anger' is 'Neutral' (23-27%)."
+      ],
+      "metadata": {
+        "id": "6c9EjTr2CCZr"
+      }
     }
   ]
 }
